crates/toml/tests/snapshots/invalid/key/dotted-redefine-table-02.stderr
TOML parse error at line 4, column 1
  |
4 | a.b.c = 2
  | ^^^
cannot extend value of type integer with a dotted key
